# fews-py-wrapper

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  example.env  example_notebook.ipynb  main.py  pyproject.toml  usage.md
.github/workflows/: pages.yml  publish-to-pypi.yml  test.yml
docs/: api.rst  conf.py  developer_documentation.md  index.rst  make.bat  usage.md
docs/_templates/autosummary/: class.rst  module.rst
fews_py_wrapper/: __init__.py  fews_webservices.py  models.py  utils.py
fews_py_wrapper/_api/: __init__.py  base.py  endpoints.py  taskruns.py  timeseries.py
tests/: conftest.py  test_fews_webservices.py  test_fewservice.py  test_models.py  test_utils.py
tests/test_api/: test_ApiEndpoint.py  test_endpoints.py  test_taskruns.py
tests/test_data/: post_timeseries.json  post_timeseries.xml  timeseries_response.json
