[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fews-py-wrapper"
version = "0.1.0"
description = "User-friendly Python wrapper for the Delft-FEWS WebServices"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fews-openapi-py-client",
    "ipykernel>=6.31.0",
    "pandas>=2.3.3",
    "pydantic>=2.11.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.4",
    "xarray>=2023.1.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.15.0",
    "pandas-stubs>=2.3.0.250703",
    "pytest>=8.3.5",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pre-commit>=4.3.0",
    "ruff>=0.13.2",
    "types-requests>=2.32.0.20250328",
]



[tool.uv.sources]
fews-openapi-py-client = { git = "https://github.com/Deltares-research/fews-openapi-py-client.git", subdirectory = "fews-openapi-py-client" }

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]  # Choose your rule sets
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.mypy]
python_version = "3.11"
packages = ["fews_py_wrapper"]
check_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["fews_openapi_py_client", "fews_openapi_py_client.*"]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pandas-stubs>=2.3.0.250703",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pre-commit>=4.3.0",
    "ruff>=0.13.2",
    "types-requests>=2.32.0.20250328",
]
