[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fews-py-wrapper"
version = "0.1.0"
description = "User-friendly Python wrapper for the Delft-FEWS WebServices"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
classifiers = [
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "fews-openapi-py-client",
    "idna>=3.15",
    "ipykernel>=6.31.0",
    "netCDF4>=1.7.2",
    "pandas>=2.3.3",
    "pandas-stubs~=2.3.3",
    "pydantic>=2.11.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.0",
    "tornado>=6.5.5",
    "urllib3>=2.7.0",
    "xarray>=2023.1.0",
]

[project.optional-dependencies]
dev = [
    "filelock>=3.20.3",
    "Pygments>=2.20.0",
    "pydata-sphinx-theme>=0.16.1",
    "myst-parser>=4.0.1",
    "mypy>=1.15.0",
    "pandas-stubs>=2.3.0.250703",
    "pytest>=9.0.3",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pre-commit>=4.3.0",
    "ruff>=0.13.2",
    "sphinx>=8.2.3",
    "types-requests>=2.32.0.20250328",
    "virtualenv>=20.36.1",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]  # Choose your rule sets
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.mypy]
python_version = "3.11"
packages = ["fews_py_wrapper"]
check_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
no_implicit_optional = true
warn_unused_ignores = true
warn_unreachable = true

[dependency-groups]
dev = [
    "filelock>=3.20.3",
    "myst-parser>=4.0.1",
    "mypy>=1.15.0",
    "pandas-stubs>=2.3.0.250703",
    "Pygments>=2.20.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pre-commit>=4.3.0",
    "ruff>=0.13.2",
    "sphinx>=8.2.3",
    "types-requests>=2.32.0.20250328",
    "virtualenv>=20.36.1",
    "pydata-sphinx-theme>=0.16.1",
]
